--- a/app/views/assemble_orders/show.html.haml
+++ b/app/views/assemble_orders/show.html.haml
@@ -1,14 +1,14 @@
 %p#notice= notice
 
 %p
-  %b Last assembler:
-  = @assemble_order.last_assembler
+  %b Purchase:
+  = @assemble_order.purchase
 %p
-  %b Next assembler:
-  = @assemble_order.next_assembler
+  %b User:
+  = @assemble_order.user
 %p
-  %b Assembler list:
-  = @assemble_order.assembler_list
+  %b Status:
+  = @assemble_order.status
 
 = link_to 'Edit', edit_assemble_order_path(@assemble_order)
 \|
