--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -77,53 +77,53 @@
             %li
               %img{src: "https://icongr.am/jam/dashboard.svg"}
               = link_to "Dashboard", user_dashboard_path
-            %li
-              %img{src: "https://icongr.am/jam/user-circle.svg"}
-              = link_to "Meu perfil", user_path(current_user)
-            - if not current_user.role == "seller"
-              %li
-                %img{src: "https://icongr.am/jam/shopping-cart.svg"}
-                -# = link_to "Comprar", store_path
-                = link_to "Comprar", store_path
-            - if current_user.role == "seller" or current_user.role == "admin"
-              %li
-                %img{src: "https://icongr.am/feather/box.svg"}
-                = link_to "Meus produtos", products_path
-            - if current_user.role == "consultant" or current_user.role == "client"
-              %li
-                %img{src: "https://icongr.am/feather/box.svg"}
-                -# = link_to "Meus pedidos", user_path(current_user)
-                = link_to "Meus pedidos", purchases_path
-            - if current_user.role == "consultant" or current_user.role == "admin"
-              %li
-                %img{src: "https://icongr.am/jam/sitemap.svg"}
-                = link_to "Minha Rede", user_levels_path
-            - if current_user.role == "admin"
-              %li
-                %img{src: "https://icongr.am/jam/box.svg"}
-                = link_to "Produtos", products_path
-              %li
-                %img{src: "https://icongr.am/jam/check.svg"}
-                = link_to "Aprovar Produtos", approve_products_path
-              %li
-                %img{src: "https://icongr.am/jam/check.svg"}
-                = link_to "Aprovar Pedidos", unauthorized_payments_path
-              %li
-                %img{src: "https://icongr.am/jam/user.svg"}
-                = link_to "Usuários", users_path
-              %li
-                %img{src: "https://icongr.am/jam/cog.svg"}
-                = link_to "Configurações", settings_path
-            - if current_user.role == "assembler"
-              menu do assembler
-            - if current_user.role == "finances"
-              menu do finances
-            - if current_user.role == "aquisition"
-              menu do aquisition
-            - if current_user.role == "support"
-              menu do support
-            -# - else
-              unauthorized
+            - case current_user.role
+              - when "assembler"
+                %li
+                  %img{src: "https://icongr.am/jam/box.svg"}
+                  = link_to "Ordens de montagem", assemble_orders_path
+              - when "finance"
+                %li
+                  %img{src: "https://icongr.am/jam/box.svg"}
+                  = link_to "Ordens de montagem", assembles_path
+              - else
+                %li
+                  %img{src: "https://icongr.am/jam/user-circle.svg"}
+                  = link_to "Meu perfil", user_path(current_user)
+                - if not current_user.role == "seller"
+                  %li
+                    %img{src: "https://icongr.am/jam/shopping-cart.svg"}
+                    -# = link_to "Comprar", store_path
+                    = link_to "Comprar", store_path
+                - if current_user.role == "seller" or current_user.role == "admin"
+                  %li
+                    %img{src: "https://icongr.am/feather/box.svg"}
+                    = link_to "Meus produtos", products_path
+                - if current_user.role == "consultant" or current_user.role == "client"
+                  %li
+                    %img{src: "https://icongr.am/feather/box.svg"}
+                    -# = link_to "Meus pedidos", user_path(current_user)
+                    = link_to "Meus pedidos", purchases_path
+                - if current_user.role == "consultant" or current_user.role == "admin"
+                  %li
+                    %img{src: "https://icongr.am/jam/sitemap.svg"}
+                    = link_to "Minha Rede", user_levels_path
+                - if current_user.role == "admin"
+                  %li
+                    %img{src: "https://icongr.am/jam/box.svg"}
+                    = link_to "Produtos", products_path
+                  %li
+                    %img{src: "https://icongr.am/jam/check.svg"}
+                    = link_to "Aprovar Produtos", approve_products_path
+                  %li
+                    %img{src: "https://icongr.am/jam/check.svg"}
+                    = link_to "Aprovar Pedidos", unauthorized_payments_path
+                  %li
+                    %img{src: "https://icongr.am/jam/user.svg"}
+                    = link_to "Usuários", users_path
+                  %li
+                    %img{src: "https://icongr.am/jam/cog.svg"}
+                    = link_to "Configurações", settings_path
 
           %img.pattern{src: "#{asset_path('group_11.svg')}"}
           = image_tag("logo-horizontal.png", class: "logo")
