--- a/app/views/assemble_orders/show.html.haml
+++ b/app/views/assemble_orders/show.html.haml
@@ -1,15 +1,71 @@
-%p#notice= notice
+.section
+  .section__content
+    %h1 Ordem de montagem
+    %strong= "Número da ordem: " + @assemble_order.id.to_s
+    %strong= "Status atual: " + @assemble_order.status
 
-%p
-  %b Purchase:
-  = @assemble_order.purchase
-%p
-  %b User:
-  = @assemble_order.user
-%p
-  %b Status:
-  = @assemble_order.status
+    %br
+    %br
 
-= link_to 'Edit', edit_assemble_order_path(@assemble_order)
-\|
-= link_to 'Back', assemble_orders_path
+    - if @assemble_order.status == "Pendente montagem"
+      = simple_form_for @assemble_order, remote: true do |f|
+        = f.input :status, input_html: { value: "Linha de montagem" }, as: :hidden
+        %button.button.button--full-width.button--blue{type: "submit"} Iniciar montagem
+
+    %h3 Itens do pedido
+
+    .table
+      %table.table
+        %thead
+          %tr
+            %th #
+            %th Nome
+            %th Tam.
+            %th Quant.
+            %th Localização
+            %th
+            %th
+        %tbody
+          - @assemble_order.assemble_order_items.each do |item|
+            %tr
+              %td
+                = image_tag(Product.find(item.purchase_item.product.id).product_pictures.first.picture.thumb.url)
+              %td= item.purchase_item.product.name
+              %td= item.purchase_item.size
+              %td= item.purchase_item.product.quantity
+              %td= item.purchase_item.product.location
+              - if item.status == "Adicionado"
+                %td{colspan: "100%"}
+                  %text{style: "color: #5ad34a"} Adicionado
+                  %img{src: "https://icongr.am/feather/check-square.svg?size=16&color=5ad34a", style: "vertical-align: text-top"}
+              - else
+                %td
+                  = simple_form_for @assemble_order, remote: true do |f|
+                    = f.simple_fields_for :assemble_order_items, item do |g|
+                      = g.input :status, input_html: { value: "Adicionado" }, as: :hidden
+                    %button.button.button--full-width.button--blue{type: "submit"} Adicionar
+                - if not item.status == "Sem estoque"
+                  %td
+                    = simple_form_for @assemble_order, remote: true do |f|
+                      = f.simple_fields_for :assemble_order_items, item do |g|
+                        = g.input :status, input_html: { value: "Sem estoque" }, as: :hidden
+                      %button.button.button--full-width.button--red{type: "submit"} Indisponível
+                - else
+                  %td{style: "text-align: center"}
+                    %img{src: "https://icongr.am/feather/alert-triangle.svg?size=16&color=d34a4a", style: "vertical-align: text-top"}
+                    %br
+                    %text{style: "color: #d34a4a"} Sem estoque
+
+    %br
+
+    - if not @assemble_order.status == "Expedição"
+      - if @assemble_order.status != "Pendente montagem"
+        = simple_form_for @assemble_order, remote: true do |f|
+          = f.input :status, input_html: { value: "Expedição" }, as: :hidden
+          %button.button.button--full-width.button--green{type: "submit"} Finalizar montagem
+
+        %br
+
+        = simple_form_for @assemble_order, remote: true do |f|
+          = f.input :status, input_html: { value: "Estoque insuficiente" }, as: :hidden
+          %button.button.button--full-width.button--red{type: "submit"} Enviar para revisão
