--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -77,15 +77,21 @@
             %li
               %img{src: "https://icongr.am/jam/dashboard.svg"}
               = link_to "Dashboard", user_dashboard_path
+
             - case current_user.role
               - when "assembler"
                 %li
                   %img{src: "https://icongr.am/jam/box.svg"}
                   = link_to "Ordens de montagem", assemble_orders_path
+
               - when "finance"
                 %li
-                  %img{src: "https://icongr.am/jam/box.svg"}
-                  = link_to "Ordens de montagem", assembles_path
+                  %img{src: "https://icongr.am/jam/coin.svg"}
+                  = link_to "Ordens de compra", purchase_orders_path
+                %li
+                  %img{src: "https://icongr.am/jam/check.svg"}
+                  = link_to "Aprovar Pedidos", unauthorized_payments_path
+
               - when "aquisition"
                 %li
                   %img{src: "https://icongr.am/jam/coin.svg"}
@@ -93,6 +99,7 @@
                 %li
                   %img{src: "https://icongr.am/jam/box.svg"}
                   = link_to "Produtos", products_path
+
               - else
                 %li
                   %img{src: "https://icongr.am/jam/user-circle.svg"}
