added cuser plan discount

--- a/app/views/shopping_carts/_list.html.haml
+++ b/app/views/shopping_carts/_list.html.haml
@@ -37,6 +37,9 @@
           %strong Total:
         %td#total
           = format_price(calc_total(@shopping_cart))
+          - if current_user.plan != "revendedor"
+            %em
+              %small 15% de desconto
         %td
 
 %br
