--- a/app/views/shopping_carts/show.html.haml
+++ b/app/views/shopping_carts/show.html.haml
@@ -40,6 +40,9 @@
               %strong Total:
             %td#total
               = format_price(calc_total(@shopping_cart))
+              - if current_user.plan != "revendedor"
+                %em
+                  %small 15% de desconto
             %td
         %br
 
