--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -24,5 +24,6 @@
   = f.input :quantity, label: "Quantidade disponível em estoque:"
   = f.input :location, label: "Localização:"
   = f.input :reference, label: "Referência:"
+  = f.input :user_id, label: "Vendedor:", as: :select, collection: User.where(role: "seller"), label_method: :name, value_method: :id
 
   %button.button.button--green.button--full-width{type: "submit"} Salvar
