updated purchase orders. created purchase order items

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -112,6 +112,9 @@
                 %li
                   %img{src: "https://icongr.am/feather/box.svg"}
                   = link_to "Meus produtos", products_path
+                %li
+                  %img{src: "https://icongr.am/jam/coin.svg"}
+                  = link_to "Pedidos", purchase_orders_path
 
               - else
                 %li
