--- a/app/views/shopping_carts/_list.html.haml
+++ b/app/views/shopping_carts/_list.html.haml
@@ -8,7 +8,8 @@
         %th Nome
         %th Tam.
         %th Quant.
-        %th{style: "min-width: 70px"} Preço un.
+        %th{style: "min-width: 100px"} Preço un.
+        %th{style: "width: 105px"} C/ desconto
         %th
     %tbody
       - shopping_cart.shopping_cart_items.each do |item|
@@ -20,20 +21,23 @@
           %td
             = simple_form_for shopping_cart, html: { class: "fancy-form", id: "edit_item_#{item.id}" }, remote: true, method: :patch do |f|
               = f.simple_fields_for :shopping_cart_items, item do |g|
-                = g.input :quantity, label: false, input_html: { style: "max-width: 10px; border: 0.5px solid grey", "data-toggle" => "#{item.id}", id: "item_#{item.id}", onkeypress: "changeQuantity($(this))", onchange: "changeQuantity($(this))" }
+                = g.input :quantity, label: false, input_html: { style: "max-width: 35px; border: 0.5px solid grey", "data-toggle" => "#{item.id}", id: "item_#{item.id}", onkeypress: "changeQuantity($(this))", onchange: "changeQuantity($(this))" }
               = f.submit "submit", id: "submit_quantity_#{item.id}", style: "display: none"
           %td= format_price(item.product.price)
+          %td
+            %small R$
+            %small= calc_discount(item.product.price.gsub(",", ".").to_f)
           %td
             = link_to remove_item_path(:item_id => item.id), data: { confirm: 'Remover item?' }, remote: true, input_html: { id: "remove_#{item.id}" } do
               %img.destroy{src: "https://icongr.am/clarity/trash.svg?color=F20505", style: "max-width: 20px"}
       %tr
-        %td{colspan: "4", style: "text-align: right"}
+        %td{colspan: "5", style: "text-align: right"}
           %strong Frete:
         %td#total
           = format_price(calc_delivery(@shopping_cart))
         %td
       %tr
-        %td{colspan: "4", style: "text-align: right"}
+        %td{colspan: "5", style: "text-align: right"}
           %strong Total:
         %td#total
           = format_price(calc_total(@shopping_cart))
