--- a/app/assets/stylesheets/components/product.scss
+++ b/app/assets/stylesheets/components/product.scss
@@ -62,11 +62,13 @@
 .product_image {
   width: 100%;
   height: fit-content;
-  max-height: 600px;
+  height: 600px;
   overflow: hidden;
+  background-color: #efefef;
 
   img {
-    width: 100%;
-    height: auto;
+    height: 100%;
+    width: auto;
+    margin: 0 auto;
   }
 }
